--- a/src/client/grosserclient/views/grossermain/GrosserMain.fxml
+++ b/src/client/grosserclient/views/grossermain/GrosserMain.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -50,12 +51,14 @@
       </VBox>
    </center>
    <top>
-      <MenuBar prefWidth="731.0" fx:id="mainNavBar" BorderPane.alignment="CENTER">
+      <MenuBar fx:id="mainNavBar" prefWidth="731.0" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="Handlinger">
             <items>
               <MenuItem mnemonicParsing="false" text="Se varer" />
                   <MenuItem mnemonicParsing="false" onAction="#addNewProductScene" text="Tilføj nyt produkt" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem mnemonicParsing="false" onAction="#updateOrders" text="Hent ordre" />
             </items>
           </Menu>
         </menus>
