--- a/src/client/grosserclient/views/grossermain/GrosserMain.fxml
+++ b/src/client/grosserclient/views/grossermain/GrosserMain.fxml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <!-- Frederik Bergmann -->
 
@@ -55,7 +44,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="Handlinger">
             <items>
-              <MenuItem mnemonicParsing="false" text="Se varer" />
+              <MenuItem mnemonicParsing="false" onAction="#waresScene" text="Se varer" />
                   <MenuItem mnemonicParsing="false" onAction="#addNewProductScene" text="Tilføj nyt produkt" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" onAction="#updateOrders" text="Hent ordre" />
