Well, vi kan nu se varerne der er i systemet (ved ikke med dem der blev tilføjet før fra Datagrip) og har mulighed for at fjerne dem helt. Mangler at kunne ændre værdien

--- a/src/client/grosserclient/views/grosseraddproduct/GrosserAddProduct.fxml
+++ b/src/client/grosserclient/views/grosseraddproduct/GrosserAddProduct.fxml
@@ -144,7 +144,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="Handlinger">
             <items>
-              <MenuItem mnemonicParsing="false" text="Se varer" />
+              <MenuItem mnemonicParsing="false" onAction="#waresScene" text="Se varer" />
                   <MenuItem mnemonicParsing="false" text="Unspecified Action" />
             </items>
           </Menu>
