--- a/src/client/grosserclient/views/grosserwares/GrosserWares.fxml
+++ b/src/client/grosserclient/views/grosserwares/GrosserWares.fxml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0"
-            prefWidth="352.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.grosserclient.views.grosserwares.GrosserWaresViewController">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="352.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.grosserclient.views.grosserwares.GrosserWaresViewController">
     <center>
         <VBox alignment="TOP_CENTER" prefHeight="545.0" prefWidth="712.0" BorderPane.alignment="CENTER">
             <BorderPane.margin>
-                <Insets bottom="3.0" left="10.0" right="10.0" top="10.0"/>
+                <Insets bottom="3.0" left="10.0" right="10.0" top="10.0" />
             </BorderPane.margin>
             <children>
                 <Label text="Dine Varer">
                     <font>
-                        <Font name="Segoe UI" size="24.0"/>
+                        <Font name="Segoe UI" size="24.0" />
                     </font>
                     <VBox.margin>
-                        <Insets bottom="5.0"/>
+                        <Insets bottom="5.0" />
                     </VBox.margin>
                 </Label>
                 <TableView fx:id="wareList" nodeOrientation="RIGHT_TO_LEFT" VBox.vgrow="ALWAYS">
                     <columns>
-                        <TableColumn fx:id="amounts" editable="false" maxWidth="100.0" minWidth="-Infinity"
-                                     prefWidth="100.0" sortable="false" text="Amount"/>
-                        <TableColumn fx:id="wares" editable="false" maxWidth="1.7976931348623157E308"
-                                     minWidth="-Infinity" prefWidth="211.0" resizable="false" sortable="false"
-                                     text="Ware"/>
+                        <TableColumn fx:id="amounts" editable="false" maxWidth="100.0" minWidth="-Infinity" prefWidth="100.0" sortable="false" text="Amount" />
+                        <TableColumn fx:id="wares" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="211.0" resizable="false" sortable="false" text="Ware" />
                     </columns>
                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" />
                     </VBox.margin>
                 </TableView>
             </children>
@@ -41,9 +46,9 @@
             <menus>
                 <Menu mnemonicParsing="false" text="Handlinger">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#homeScreen" text="Hjem"/>
-                        <MenuItem mnemonicParsing="false" onAction="#refresh" text="Se varer"/>
-                        <MenuItem mnemonicParsing="false" onAction="#addNewProductScene" text="Tilføj nyt produkt"/>
+                        <MenuItem mnemonicParsing="false" onAction="#homeScreen" text="Hjem" />
+                        <MenuItem mnemonicParsing="false" onAction="#refresh" text="Se varer" />
+                        <MenuItem mnemonicParsing="false" onAction="#addNewProductScene" text="Tilføj nyt produkt" />
                     </items>
                 </Menu>
             </menus>
@@ -52,11 +57,12 @@
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
-                <Button mnemonicParsing="false" onAction="#changeAmount" text="Opdater Antal"/>
-                <Button mnemonicParsing="false" onAction="#deleteItem" text="Fjern Vare"/>
+            <TextField fx:id="newWareAmountField" alignment="CENTER_RIGHT" promptText="Ny Antal" />
+                <Button mnemonicParsing="false" onAction="#changeAmount" text="Opdater Antal" />
+                <Button mnemonicParsing="false" onAction="#deleteItem" text="Fjern Vare" />
             </buttons>
             <BorderPane.margin>
-                <Insets left="10.0" right="10.0"/>
+                <Insets left="10.0" right="10.0" />
             </BorderPane.margin>
         </ButtonBar>
     </bottom>
