--- a/src/client/grosserclient/views/grosserwares/GrosserWares.fxml
+++ b/src/client/grosserclient/views/grosserwares/GrosserWares.fxml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="352.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.grosserclient.views.grosserwares.GrosserWaresViewController">
     <center>
@@ -31,8 +22,8 @@
                 </Label>
                 <TableView fx:id="wareList" nodeOrientation="RIGHT_TO_LEFT" VBox.vgrow="ALWAYS">
                     <columns>
-                        <TableColumn fx:id="amounts" editable="false" maxWidth="100.0" minWidth="-Infinity" prefWidth="100.0" sortable="false" text="Amount" />
-                        <TableColumn fx:id="wares" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="211.0" resizable="false" sortable="false" text="Ware" />
+                        <TableColumn fx:id="amounts" editable="false" maxWidth="100.0" minWidth="-Infinity" prefWidth="100.0" sortable="false" text="Antal" />
+                        <TableColumn fx:id="wares" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="211.0" resizable="false" sortable="false" text="Vare" />
                     </columns>
                     <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" />
@@ -55,11 +46,35 @@
         </MenuBar>
     </top>
     <bottom>
-        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <ButtonBar prefHeight="70.0" prefWidth="332.0" BorderPane.alignment="CENTER">
             <buttons>
-            <TextField fx:id="newWareAmountField" alignment="CENTER_RIGHT" promptText="Ny Antal" />
-                <Button mnemonicParsing="false" onAction="#changeAmount" text="Opdater Antal" />
-                <Button mnemonicParsing="false" onAction="#deleteItem" text="Fjern Vare" />
+            <HBox alignment="CENTER_RIGHT" spacing="5.0">
+               <children>
+                  <TextField fx:id="newWareAmountField" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="143.0" promptText="Antal">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </TextField>
+                  <GridPane alignment="CENTER_RIGHT" maxHeight="60.0" maxWidth="200.0" minWidth="-Infinity" HBox.hgrow="NEVER">
+                     <columnConstraints>
+                        <ColumnConstraints halignment="CENTER" hgrow="NEVER" maxWidth="120100.0" minWidth="80.0" prefWidth="90.0" />
+                        <ColumnConstraints hgrow="NEVER" maxWidth="100.0" minWidth="80.0" prefWidth="90.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="32.0" minHeight="24.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="32.0" minHeight="24.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                            <Button mnemonicParsing="false" onAction="#increaseAmount" text="Tilføj Antal" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
+                        <Button mnemonicParsing="false" onAction="#reduceAmount" text="Fjern Antal" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
+                            <Button mnemonicParsing="false" onAction="#deleteItem" text="Fjern Vare" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
+                     </children>
+                  </GridPane>
+               </children>
+               <padding>
+                  <Insets bottom="5.0" />
+               </padding>
+            </HBox>
             </buttons>
             <BorderPane.margin>
                 <Insets left="10.0" right="10.0" />
