--- a/src/client/grosserclient/views/grosseraddcustomer/GrosserAddCustomer.fxml
+++ b/src/client/grosserclient/views/grosseraddcustomer/GrosserAddCustomer.fxml
@@ -69,7 +69,7 @@
    <bottom>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
-          <Button mnemonicParsing="false" onAction="#abort" text="Afbryd" />
+          <Button fx:id="abortButton" mnemonicParsing="false" onAction="#abort" text="Afbryd" />
             <Button mnemonicParsing="false" onAction="#create" text="Opret" />
         </buttons>
          <BorderPane.margin>
