--- a/src/client/grosserclient/views/grosseraddcustomer/GrosserAddCustomer.fxml
+++ b/src/client/grosserclient/views/grosseraddcustomer/GrosserAddCustomer.fxml
@@ -10,6 +10,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<!-- Frederik Bergmann -->
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="427.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.grosserclient.views.grosseraddcustomer.GrosserAddCustomerViewController">
    <top>
       <Label text="Opret ny kunde" BorderPane.alignment="CENTER">
