--- a/src/client/customerclient/views/customerbrowser/CustomerBrowser.fxml
+++ b/src/client/customerclient/views/customerbrowser/CustomerBrowser.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<!-- Kasper Falk -->
+<!-- Kasper Falk, Andreas Østergaard -->
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.customerclient.views.customerbrowser.CustomerBrowserViewController">
     <children>
